// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeightsEditComponent should create with initialized form weights controls 1`] = `
<vtm-weights-edit
  detectChange={[Function ViewRef_]}
  fb={[Function FormBuilder]}
  numberOfAxles$={[Function Observable]}
  onDestroy$={[Function Subject]}
  parent={[Function FormGroupDirective]}
  techRecHelper={[Function TechRecordHelperService]}
  techRecord={[Function Object]}
  techRecordFg={[Function FormGroup]}
>
  <div
    class="govuk-grid-row"
  >
    <div
      class="govuk-grid-column-three-quarters"
    >
      <div
        class="govuk-form-group"
      >
        <fieldset
          class="govuk-fieldset"
        >
          <div
            class="ng-untouched ng-pristine ng-valid"
            ng-reflect-form="[object Object]"
          >
            <h2
              class="govuk-heading-m"
            >
              Vehicle weight (kg)
            </h2>
            
            <div
              class="govuk-form-group ng-untouched ng-pristine ng-valid"
              ng-reflect-form="[object Object]"
            >
              <label
                class="govuk-label govuk-!-font-weight-bold"
              >
                 Gross vehicle weight 
              </label>
              <div
                class="govuk-inset-text govuk-!-margin-top-3"
              >
                
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-grossGbWeight"
                  >
                     GB 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-grossGbWeight"
                    maxlength="5"
                    name="grossGbWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="grossGbWeight"
                    type="number"
                  />
                </div>
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-grossEecWeight"
                  >
                     EEC (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-grossEecWeight"
                    maxlength="5"
                    name="grossEecWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="grossEecWeight"
                    type="number"
                  />
                </div>
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-grossDesignWeight"
                  >
                     Design (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-grossDesignWeight"
                    maxlength="5"
                    name="grossDesignWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="grossDesignWeight"
                    type="number"
                  />
                </div>
              </div>
            </div>
            
            <div
              class="govuk-form-group ng-untouched ng-pristine ng-valid"
              ng-reflect-form="[object Object]"
            >
              <label
                class="govuk-label govuk-!-font-weight-bold"
              >
                 Gross train weight 
              </label>
              <div
                class="govuk-inset-text govuk-!-margin-top-3"
              >
                
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-trainGbWeight"
                  >
                     GB (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-trainGbWeight"
                    maxlength="5"
                    name="trainGbWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="trainGbWeight"
                    type="number"
                  />
                </div>
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-trainEecWeight"
                  >
                     EEC (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-trainEecWeight"
                    maxlength="5"
                    name="trainEecWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="trainEecWeight"
                    type="number"
                  />
                </div>
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-trainDesignWeight"
                  >
                     Design (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-trainDesignWeight"
                    maxlength="5"
                    name="trainDesignWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="trainDesignWeight"
                    type="number"
                  />
                </div>
              </div>
            </div>
            
            <div
              class="govuk-form-group ng-untouched ng-pristine ng-valid"
              ng-reflect-form="[object Object]"
            >
              <label
                class="govuk-label govuk-!-font-weight-bold"
              >
                 Max train weight 
              </label>
              <div
                class="govuk-inset-text govuk-!-margin-top-3"
              >
                
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-maxTrainGbWeight"
                  >
                     GB (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-maxTrainGbWeight"
                    maxlength="5"
                    name="maxTrainGbWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="maxTrainGbWeight"
                    type="number"
                  />
                </div>
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-maxTrainEecWeight"
                  >
                     EEC (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-maxTrainEecWeight"
                    maxlength="5"
                    name="maxTrainEecWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="maxTrainEecWeight"
                    type="number"
                  />
                </div>
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-maxTrainDesignWeight"
                  >
                     Design (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-maxTrainDesignWeight"
                    maxlength="5"
                    name="maxTrainDesignWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="maxTrainDesignWeight"
                    type="number"
                  />
                </div>
              </div>
            </div>
            
            
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</vtm-weights-edit>
`;

exports[`WeightsEditComponent should render AXLE weights controls on initialization 1`] = `
<vtm-weights-edit
  detectChange={[Function ViewRef_]}
  fb={[Function FormBuilder]}
  numberOfAxles$={[Function Observable]}
  onDestroy$={[Function Subject]}
  parent={[Function FormGroupDirective]}
  techRecHelper={[Function TechRecordHelperService]}
  techRecord={[Function Object]}
  techRecordFg={[Function FormGroup]}
>
  <div
    class="govuk-grid-row"
  >
    <div
      class="govuk-grid-column-three-quarters"
    >
      <div
        class="govuk-form-group"
      >
        <fieldset
          class="govuk-fieldset"
        >
          <div
            class="ng-untouched ng-pristine ng-valid"
            ng-reflect-form="[object Object]"
          >
            <h2
              class="govuk-heading-m"
            >
              Vehicle weight (kg)
            </h2>
            
            <div
              class="govuk-form-group ng-untouched ng-pristine ng-valid"
              ng-reflect-form="[object Object]"
            >
              <label
                class="govuk-label govuk-!-font-weight-bold"
              >
                 Gross vehicle weight 
              </label>
              <div
                class="govuk-inset-text govuk-!-margin-top-3"
              >
                
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-grossGbWeight"
                  >
                     GB 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-grossGbWeight"
                    maxlength="5"
                    name="grossGbWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="grossGbWeight"
                    type="number"
                  />
                </div>
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-grossEecWeight"
                  >
                     EEC (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-grossEecWeight"
                    maxlength="5"
                    name="grossEecWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="grossEecWeight"
                    type="number"
                  />
                </div>
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-grossDesignWeight"
                  >
                     Design (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-grossDesignWeight"
                    maxlength="5"
                    name="grossDesignWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="grossDesignWeight"
                    type="number"
                  />
                </div>
              </div>
            </div>
            
            <div
              class="govuk-form-group ng-untouched ng-pristine ng-valid"
              ng-reflect-form="[object Object]"
            >
              <label
                class="govuk-label govuk-!-font-weight-bold"
              >
                 Gross train weight 
              </label>
              <div
                class="govuk-inset-text govuk-!-margin-top-3"
              >
                
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-trainGbWeight"
                  >
                     GB (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-trainGbWeight"
                    maxlength="5"
                    name="trainGbWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="trainGbWeight"
                    type="number"
                  />
                </div>
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-trainEecWeight"
                  >
                     EEC (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-trainEecWeight"
                    maxlength="5"
                    name="trainEecWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="trainEecWeight"
                    type="number"
                  />
                </div>
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-trainDesignWeight"
                  >
                     Design (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-trainDesignWeight"
                    maxlength="5"
                    name="trainDesignWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="trainDesignWeight"
                    type="number"
                  />
                </div>
              </div>
            </div>
            
            <div
              class="govuk-form-group ng-untouched ng-pristine ng-valid"
              ng-reflect-form="[object Object]"
            >
              <label
                class="govuk-label govuk-!-font-weight-bold"
              >
                 Max train weight 
              </label>
              <div
                class="govuk-inset-text govuk-!-margin-top-3"
              >
                
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-maxTrainGbWeight"
                  >
                     GB (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-maxTrainGbWeight"
                    maxlength="5"
                    name="maxTrainGbWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="maxTrainGbWeight"
                    type="number"
                  />
                </div>
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-maxTrainEecWeight"
                  >
                     EEC (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-maxTrainEecWeight"
                    maxlength="5"
                    name="maxTrainEecWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="maxTrainEecWeight"
                    type="number"
                  />
                </div>
                
                <div
                  class="govuk-form-group govuk-!-margin-left-3"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                    for="test-edit-maxTrainDesignWeight"
                  >
                     Design (optional) 
                  </label>
                  <input
                    class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                    id="test-edit-maxTrainDesignWeight"
                    maxlength="5"
                    name="maxTrainDesignWeight"
                    ng-reflect-maxlength="5"
                    ng-reflect-name="maxTrainDesignWeight"
                    type="number"
                  />
                </div>
              </div>
            </div>
            
            
            <h2
              class="govuk-heading-m"
            >
              Axle weight (kg)
            </h2>
            <div
              class="ng-untouched ng-pristine ng-valid"
              formarrayname="axlesWeights"
              ng-reflect-name="axlesWeights"
            >
              
              <div
                class="ng-untouched ng-pristine ng-valid"
                ng-reflect-form="[object Object]"
              >
                
                <div
                  class="govuk-form-group ng-untouched ng-pristine ng-valid"
                  ng-reflect-form="[object Object]"
                >
                  <label
                    class="govuk-label govuk-!-font-weight-bold"
                  >
                     Axle 1 
                  </label>
                  <div
                    class="govuk-inset-text govuk-!-margin-top-3"
                  >
                    
                    
                    <div
                      class="govuk-form-group govuk-!-margin-left-3"
                    >
                      <label
                        class="govuk-label govuk-!-font-weight-bold"
                        for="test-edit-gbWeight-1"
                      >
                         GB 
                      </label>
                      <input
                        class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                        id="test-edit-gbWeight-1"
                        maxlength="5"
                        name="gbWeight"
                        ng-reflect-maxlength="5"
                        ng-reflect-name="gbWeight"
                        type="number"
                      />
                    </div>
                    
                    <div
                      class="govuk-form-group govuk-!-margin-left-3"
                    >
                      <label
                        class="govuk-label govuk-!-font-weight-bold"
                        for="test-edit-eecWeight-1"
                      >
                         EEC (optional) 
                      </label>
                      <input
                        class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                        id="test-edit-eecWeight-1"
                        maxlength="5"
                        name="eecWeight"
                        ng-reflect-maxlength="5"
                        ng-reflect-name="eecWeight"
                        type="number"
                      />
                    </div>
                    
                    <div
                      class="govuk-form-group govuk-!-margin-left-3"
                    >
                      <label
                        class="govuk-label govuk-!-font-weight-bold"
                        for="test-edit-designWeight-1"
                      >
                         Design 
                      </label>
                      <input
                        class="govuk-input govuk-input--width-5 ng-untouched ng-pristine ng-valid"
                        id="test-edit-designWeight-1"
                        maxlength="5"
                        name="designWeight"
                        ng-reflect-maxlength="5"
                        ng-reflect-name="designWeight"
                        type="number"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</vtm-weights-edit>
`;
